--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
-server.port = 8082
-
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:dcbapp
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/dcbapp
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.show-sql=true
+#server.port = 8082
+#
+#welcome.message = Welcome to my world!
+#
+##spring.h2.console.enabled=true
+##spring.datasource.url=jdbc:h2:mem:dcbapp
+##spring.datasource.driverClassName=org.h2.Driver
+##spring.datasource.username=sa
+##spring.datasource.password=password
+##spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:postgresql://localhost:5432/dcbapp
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.username=
+#spring.datasource.password=
+#spring.jpa.show-sql=true
